--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,18 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+/* styles.css */
+@font-face {
+  font-family: 'Modern';
+  src: url(../src/assets/Font/ModernWarfare-8MM6z.ttf);
+}
+@font-face {
+  font-family: 'Modernone';
+  src: url(../src/assets/Font/ModernTechnoDemoVersionRegular-rgBWx.otf);
+}
+@font-face {
+    font-family: 'Ubuntu';
+    src: url('../src/assets/Font/Ubuntu-Regular.ttf') format('truetype');
+  }
+  
