--- a/src/Subcomponents/Header.css
+++ b/src/Subcomponents/Header.css
@@ -5,6 +5,11 @@
         margin-top: 60px;
     }
 }
+@media (min-width: 1921px) and (max-width: 3000px) {
+    .toggleBtn{
+        display: none;
+    }
+}
 @media (min-width: 1280px) and (max-width: 1920px) {
     .header{
         width: 90vw;
